        When doing so, DO NOT INCLUDE version.json from root, as it will update the build ID of it
    - develop a PyCharm plugin for FactoryBuilder type hints, and mod dev stuff


changelog of snapshot <21w39a>, released on <29.09.2021> targeting <1.17>
    Resource system:
        - optimised how mc source assets are linked at setup time


changelog of snapshot 21w37a, released on 15.09.2021 targeting 1.17
    Python:
        - allowing now python 3.10, as all our dependencies have upgraded their support

    Registries:
        - some work on deferred registries, and the other registry parts

    Rendering:
        - window caption contains now in dev version branch name + last commit hash

    Bug Fixes:
        - BlockItemGenerator was doing not what it was supposed to do

    Gameplay:
        - creative item search tab is now filled with items

    Capabilities:
        - implemented capability API
        - currently supports items [AbstractItem instance, not ItemStack], blocks and entities
        - can be disabled for entries in the system
        - WARNING: block & item implementation is linked to some public-facing serialization code, meaning
            mods which are not careful enough may override the needed bindings

    Blocks:
        - block serialization code (the public facing dump_data() and inject()) were rewritten, mods
            overriding these will encounter issues!

    Networking & dedicated server:
        - added more networking code, including first real packages, including:
            - handshake (both directions)
            - sync packages (package ID's, registry content, mod list)
            - disconnection packages (init & response)
        - fixed some bugs existing in the networking API

        - fixed dedicated servers doing no mod loading, no world generation, and in general acting not like
            a game instance


changelog of snapshot 21w35a released on 01.09.2021 targeting 1.17.1
    JVM: