@@ -16,6 +16,7 @@ import pyglet
 from mcpython import shared
 from mcpython.util.annotation import onlyInClient
 
+from ...engine.rendering.RenderingLayerManager import INTER_BACKGROUND
 from . import AbstractState
 from .ui import UIPartProgressBar
 from .util import update_memory_usage_bar
@@ -60,7 +61,9 @@ class ModLoadingProgress(AbstractState.AbstractState):
 
     def bind_to_eventbus(self):
         self.eventbus.subscribe("user:window:resize", self.on_resize)
-        self.eventbus.subscribe("render:draw:2d:background", self.on_draw_2d_pre)
+        self.eventbus.subscribe(
+            INTER_BACKGROUND.getRenderingEvent(), self.on_draw_2d_pre
+        )
         self.eventbus.subscribe("tickhandler:general", self.on_update)
 
     def on_resize(self, w, h):
