@@ -13,6 +13,7 @@ This project is not official by mojang and does not relate to it.
 """
 import mcpython.engine.event.EventInfo
 import pyglet
+from mcpython.engine.rendering.RenderingLayerManager import MIDDLE_GROUND
 from mcpython.util.annotation import onlyInClient
 from pyglet.window import mouse
 
@@ -53,7 +54,9 @@ class UIPartImage(AbstractUIPart.AbstractUIPart):
 
     def bind_to_eventbus(self):
         self.master[0].eventbus.subscribe("user:mouse:press", self.on_mouse_press)
-        self.master[0].eventbus.subscribe("render:draw:2d", self.on_draw_2d)
+        self.master[0].eventbus.subscribe(
+            MIDDLE_GROUND.getRenderingEvent(), self.on_draw_2d
+        )
 
     def on_mouse_press(self, x, y, button, modifiers):
         mx, my = self.get_real_position()
